deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: node-app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app2
  template:
    metadata:
      labels:
        app: node-app2
  spec:
    containers:
      - name: node-app2
        image: nnekic/nodeapp-project2
        ports:
          - containerPort: 3000
