service.yml
apiVersion: v1 
kind: Service 
metadata:
  name: nodeapp2-clusterip
spec:
  selector:
    app: node-app2
  ports:
    - name: http
      port: 80
      targetPort: 3000
