ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: nodeapp2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nodeapp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeapp2-clusterip
                port:
                  number: 80
